# citationlib

./: LICENSE  README.md  deploy.sh  pyproject.toml  requirements.txt  tests.py
citationlib/: __init__.py  api.py  config.py  formatter.py  metadata.py  output.py  scraper.py  styles.py  types.py  utils.py
src/: __init__.py  api.py  config.py  exceptions.py  formatter.py  metadata.py  output.py  styles.py  types.py  utils.py
