[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citationlib"
version = "0.2.1"
authors = [
    { name = "Asanshay Gupta" },
]
description = "A powerful Python library for generating academic citations from various sources"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sgmllib3k==1.0.0",
    "habanero>=1.2.6",
    "arxiv>=1.4.7",
    "requests>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "typing-extensions>=4.5.0",
]

[project.urls]
"Homepage" = "https://github.com/SuperAce100/citationlib"
"Bug Tracker" = "https://github.com/SuperAce100/citationlib/issues"

[tool.hatch.build.targets.wheel]
packages = ["citationlib"] 